--- a/libraries/tickers/newsticker02/styles/ticker-style.css
+++ b/libraries/tickers/newsticker02/styles/ticker-style.css
@@ -1,13 +1,13 @@
 /* Ticker Styling */
 #ticker-wrapper.has-js {
-	padding: 0px 20px;
+	padding: 0px 10px;
 /*	width: 780px;*/
 	height: 32px;
 	display: block;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	background-color: #f8f0db;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	background-color: #F8F0DB;
 	font-size: 0.8em;
 }
 #ticker {
@@ -16,13 +16,13 @@
 	display: block;
 	position: relative;
 	overflow: hidden;
-	background-color: #f8f0db;
+	background-color: #F8F0DB;
 }
 #ticker-title {
 	padding-top: 9px;
 	color: #990000;
 	font-weight: bold;
-	background-color: #f8f0db;
+	background-color: #F8F0DB;
 }
 #ticker-content {
 	margin: 0px;
@@ -30,7 +30,7 @@
 	position: absolute;
 	color: #1F527B;
 	font-weight: bold;
-	background-color: #f8f0db;
+	background-color: #F8F0DB;
 	overflow: hidden;
 	white-space: nowrap;
 	line-height: 1.2em;
@@ -46,14 +46,14 @@
 	padding-top: 9px;
 	position: absolute;
 	top: 0px;
-	background-color: #f8f0db;
+	background-color: #F8F0DB;
 	display: block;
 	width: 100%;
 	height: 23px; 
 }
 #ticker-swipe span {
 	margin-left: 1px;
-	background-color: #f8f0db;
+	background-color: #F8F0DB;
 	border-bottom: 1px solid #1F527B;
 	height: 12px;
 	width: 7px;
@@ -84,7 +84,7 @@
 	background-position: 32px 0px;
 }
 #ticker-controls li#play-pause.paused {
-	background-image: url('../images/controls.png');	
+	background-image: url('../images/controls.png');
 	background-position: 48px 16px;
 }
 #ticker-controls li#play-pause.paused.over {
@@ -95,23 +95,23 @@
 }
 #ticker-controls li#prev {
 	background-image: url('../images/controls.png');
-	background-position: 0px 16px;		
+	background-position: 0px 16px;
 }
 #ticker-controls li#prev.over {
-	background-position: 0px 32px;		
+	background-position: 0px 32px;
 }
 #ticker-controls li#prev.down {
-	background-position: 0px 0px;		
+	background-position: 0px 0px;
 }
 #ticker-controls li#next {
-	background-image: url('../images/controls.png');	
-	background-position: 16px 16px;	
+	background-image: url('../images/controls.png');
+	background-position: 16px 16px;
 }
 #ticker-controls li#next.over {
-	background-position: 16px 32px;	
+	background-position: 16px 32px;
 }
-#ticker-controls li#next.down {	
-	background-position: 16px 0px;	
+#ticker-controls li#next.down {
+	background-position: 16px 0px;
 }
 .js-hidden {
 	display: none;
@@ -124,17 +124,17 @@
 	left: 80px;
 }
 .left #ticker-controls, .left #ticker-content, .left #ticker-title, .left #ticker {
-    float: left;
+	float: left;
 }
 .left #ticker-controls {
-    padding-left: 6px;
+	padding-left: 6px;
 }
 .right #ticker-swipe {
 	right: 80px;
 }
 .right #ticker-controls, .right #ticker-content, .right #ticker-title, .right #ticker {
-    float: right;
+	float: right;
 }
 .right #ticker-controls {
-    padding-right: 6px;
+	padding-right: 6px;
 }
