--- a/templates/blocks/impression_block_ticker.html
+++ b/templates/blocks/impression_block_ticker.html
@@ -43,15 +43,26 @@
 <{/if}>
 
 <{if $tickertype == $smarty.const._MB_IMPRESSION_TICKER03}>
-	<link rel="stylesheet" href="<{$icms_url}>/libraries/tickers/newsticker02/styles/ticker-style.css" type="text/css" media="screen">
-	<script type="text/javascript" src="<{$icms_url}>/libraries/tickers/newsticker02/includes/jquery.ticker.js"></script>
+	<link rel="stylesheet" href="<{$icms_url}>/libraries/tickers/jquery_news_ticker/styles/ticker-style.css" type="text/css" media="screen">
+	<script type="text/javascript" src="<{$icms_url}>/libraries/tickers/jquery_news_ticker/includes/jquery.ticker.js"></script>
 	<script type="text/javascript">
 		$(function () {
 			$('#js-news').ticker({
-				speed: 0.10,
-				fadeInSpeed: 600,
-				controls: false,
-				titleText: 'Latest news:'
+				speed: 0.10,			// The speed of the reveal
+				ajaxFeed: false,		// Populate jQuery News Ticker via a feed
+				feedUrl: false,			// The URL of the feed
+										// MUST BE ON THE SAME DOMAIN AS THE TICKER
+				feedType: 'xml',		// Currently only XML
+				htmlFeed: true,			// Populate jQuery News Ticker via HTML
+				debugMode: true,		// Show some helpful errors in the console or as alerts
+										// SHOULD BE SET TO FALSE FOR PRODUCTION SITES!
+				controls: false,			// Whether or not to show the jQuery News Ticker controls
+				titleText: 'Latest news',	// To remove the title set this to an empty String
+				displayType: 'reveal',	// Animation type - current options are 'reveal' or 'fade'
+				direction: 'ltr',		// Ticker direction - current options are 'ltr' or 'rtl'
+				pauseOnItems: 2000,		// The pause on a news item before being replaced
+				fadeInSpeed: 600,		// Speed of fade in animation
+				fadeOutSpeed: 300		// Speed of fade out animation
 			});
 		});
 	</script>
