--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -30,7 +30,13 @@
 	<!-- Social Share Privacy -->
 	<link rel="stylesheet" type="text/css" href="<{$icms_url}>/libraries/socialshareprivacy/socialshareprivacy.css" />
 	<script type="text/javascript" src="<{$icms_url}>/libraries/socialshareprivacy/jquery.socialshareprivacy.js"></script>
-	<script type="text/javascript"> jQuery(document).ready(function($){ if($('#socialshareprivacy').length > 0){ $('#socialshareprivacy').socialSharePrivacy(); } }); </script>
+	<script type="text/javascript">
+		jQuery(document).ready(function($){
+			if($('#socialshareprivacy').length > 0){
+				$('#socialshareprivacy').socialSharePrivacy();
+			}
+		});
+	</script>
 <{/if}>
 
 <{$article.imageheader}>
