This bugfix solve the CSS3 issue under IE. The size (height) from the backgnd.png is a little bigger now too.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23959 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -1,5 +1,26 @@
 <link rel="stylesheet" type="text/css" href="<{$icms_url}>/modules/<{$module_dir}>/impressionstyle.css" />
 
+<!--[if  ie 9]>
+<style type="text/css" media="screen">
+	.linear-top,
+	.linear-right,
+	.linear-bottom,
+	.linear-left,
+	.gradient,
+	.impression_minibutton,
+	.impression_button,
+	.impression_microbutton,
+	.impression_tblhdr,
+	.impression_tblhdrrow
+	{
+		filter: none;
+		background-image: url(<{$icms_url}>/modules/<{$dirname}>/images/icon/backgnd.png);
+		background-size: 100% 600%;
+		zoom: 1;
+	}
+</style>
+<![endif]-->
+
 <{if $article.showsbookmarks == 2 && $article.google > 0}>
 	<!-- Google Plus One script -->
 	<script type="text/javascript">
