--- a/modules/impression/impressionstyle.css
+++ b/modules/impression/impressionstyle.css
@@ -114,10 +114,12 @@ tr.impression_even td {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D1D1D1));
 	background-image: -webkit-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:    -moz-linear-gradient(top, #FFFFFF, #D1D1D1);
-	background-image:     -ms-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:      -o-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:         linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-position: center center;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1)";
+    zoom: 1;
 	background-repeat: repeat-x;
 	color: #444;
 	font-size: smaller;
@@ -135,10 +137,12 @@ tr.impression_even td {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D1D1D1));
 	background-image: -webkit-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:    -moz-linear-gradient(top, #FFFFFF, #D1D1D1);
-	background-image:     -ms-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:      -o-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:         linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-position: center center;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1)";
+    zoom: 1;
 	background-repeat: repeat-x;
 	color: #444;
 	font-size: .8em;
@@ -156,10 +160,12 @@ tr.impression_even td {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D1D1D1));
 	background-image: -webkit-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:    -moz-linear-gradient(top, #FFFFFF, #D1D1D1);
-	background-image:     -ms-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:      -o-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:         linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-position: center center;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1)";
+    zoom: 1;
 	background-repeat: repeat-x;
 	color: #000;
 	height: 1.2em;
@@ -183,10 +189,12 @@ tr.impression_even td {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D1D1D1));
 	background-image: -webkit-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:    -moz-linear-gradient(top, #FFFFFF, #D1D1D1);
-	background-image:     -ms-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:      -o-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:         linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-position: center bottom;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1)";
+    zoom: 1;
 	background-repeat: repeat-x;
 	background-size: contain;
 	margin-right: -1px;
@@ -203,10 +211,12 @@ tr.impression_even td {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D1D1D1));
 	background-image: -webkit-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:    -moz-linear-gradient(top, #FFFFFF, #D1D1D1);
-	background-image:     -ms-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:      -o-linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-image:         linear-gradient(top, #FFFFFF, #D1D1D1);
 	background-position: center center;
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#FFFFFF, endColorstr=#D1D1D1)";
+    zoom: 1;
 	background-size: contain; }
 
 .impression_tblrow {
