Added note about what generator was used for producing the gradient code
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@24018 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/impressionstyle.css
+++ b/modules/impression/impressionstyle.css
@@ -14,6 +14,7 @@
 * @version		$Id$
 */
 
+/** Gradient generator used: http://www.colorzilla.com/gradient-editor/     */
 
 .impression_even {
 	background-color: #E8E6E2;
