Update for gradient background. Created seperate class for gradient background.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@24027 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_moduleabout.html
+++ b/modules/impression/templates/impression_moduleabout.html
@@ -12,7 +12,7 @@
 
 <{if $module_credits}>
 	<div class="impression_table">
-		<div class="impression_tblhdrrow" style="color: #33538E;">
+		<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 			<div class="impression_tblcell"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_CREDITS}></div>
 		</div>
 		<div class="impression_tblcell"><{$module_credits}></div>
@@ -22,7 +22,7 @@
 <br />
 
 <div class="impression_table">
-	<div class="impression_tblhdrrow" style="color: #33538E;">
+	<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 		<div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_INFO}></div>
 		<div style="display: table-cell; padding: 3px;"> </div>
 	</div>
@@ -75,7 +75,7 @@
 <br />
 
 <div class="impression_table">
-	<div class="impression_tblhdrrow" style="color: #33538E;">
+	<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 		<div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_AUTHOR_INFO}></div>
 		<div style="display: table-cell; padding: 3px;"> </div>
 	</div>
@@ -166,7 +166,7 @@
 
 <{if $module_manual}>
 	<br />
-	<div class="impression_tblhdr" style="color: #33538E;"><{$smarty.const._MODABOUT_IMPRESSION_MANUAL}></div>
+	<div class="impression_gradient impression_tblhdr" style="color: #33538E;"><{$smarty.const._MODABOUT_IMPRESSION_MANUAL}></div>
 	<div class="impression_table">
 		<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_MANUAL_WIKI}></div>
 		<div class="impression_tblcell">
@@ -180,7 +180,7 @@
 <{if $module_warning}>
 	<br />
 	<div class="impression_table">
-		<div class="impression_tblhdrrow" style="color: #33538E;">
+		<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_DISCLAIMER}></div>
 		</div>
 		<div class="impression_tblrow">
@@ -202,7 +202,7 @@
 <{if $module_version_history}>
 	<br />
 	<div class="impression_table">
-		<div class="impression_tblhdrrow" style="color: #33538E;">
+		<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_VERSION_HISTORY}></div>
 		</div>
 		<div class="impression_tblrow">
@@ -218,7 +218,7 @@
 <{if $module_license_txt}>
 	<br />
 	<div class="impression_table">
-		<div class="impression_tblhdrrow" style="color: #33538E;">
+		<div class="impression_gradient impression_tblhdrrow" style="color: #33538E;">
 			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_LICENSE}></div>
 		</div>
 		<div class="impression_tblrow">
