--- a/modules/impression/templates/impression_topten.html
+++ b/modules/impression/templates/impression_topten.html
@@ -4,7 +4,7 @@
 <{foreach item=ranking from=$rankings}>
 	<div style="clear: both; margin-bottom: 5px;"><b><{$smarty.const._MD_IMPRESSION_CATEGORY}>: <{$ranking.title}></b></div>
 	<div class="impression_table" style="margin-bottom: 20px;">
-		<div class="impression_tblhdrrow">
+		<div class="impression_gradient impression_tblhdrrow">
 			<div class="impression_tblcell" style="text-align: center;"><{$smarty.const._MD_IMPRESSION_RANK}></div>
 			<div class="impression_tblcell"><{$smarty.const._MD_IMPRESSION_TITLE}></div>
 			<div class="impression_tblcell"><{$smarty.const._MD_IMPRESSION_CATEGORY}></div>
