Continued with modifications for ipf
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24470 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/impression_admin_index.html
+++ b/templates/impression_admin_index.html
@@ -1,1 +1,3 @@
+<{if $impression_articles_table}><div style="font-size: 10px;"><{$impression_articles_table}></div><{/if}>
+
 <{if $impression_cat_table}><{$impression_cat_table}><{/if}>
