Cleaned up and reduced some code. Updated lang-files.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24634 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/impression_catview.html
+++ b/templates/impression_catview.html
@@ -41,18 +41,18 @@
 <{if $show_articles == true}>
 <div style="text-align: center; font-size: .9em;">
 <b><{$smarty.const._MD_IMPRESSION_SORTBY}></b>&nbsp;<{$smarty.const._MD_IMPRESSION_TITLE}> (
-<a href="catview.php?cid=<{$category_id}>&orderby=titleA"><img src="images/up.gif" style="vertical-align: middle;" alt="" /></a>
-<a href="catview.php?cid=<{$category_id}>&orderby=titleD"><img src="images/down.gif" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=titleA"><img src="images/up.png" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=titleD"><img src="images/down.png" style="vertical-align: middle;" alt="" /></a>
 )
 &nbsp;
 <{$smarty.const._MD_IMPRESSION_DATE}> (
-<a href="catview.php?cid=<{$category_id}>&orderby=dateA"><img src="images/up.gif" style="vertical-align: middle;" alt="" /></a>
-<a href="catview.php?cid=<{$category_id}>&orderby=dateD"><img src="images/down.gif" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=dateA"><img src="images/up.png" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=dateD"><img src="images/down.png" style="vertical-align: middle;" alt="" /></a>
 )
 &nbsp;
 <{$smarty.const._MD_IMPRESSION_POPULARITY}> (
-<a href="catview.php?cid=<{$category_id}>&orderby=hitsA"><img src="images/up.gif" style="vertical-align: middle;" alt="" /></a>
-<a href="catview.php?cid=<{$category_id}>&orderby=hitsD"><img src="images/down.gif" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=hitsA"><img src="images/up.png" style="vertical-align: middle;" alt="" /></a>
+<a href="catview.php?cid=<{$category_id}>&orderby=hitsD"><img src="images/down.png" style="vertical-align: middle;" alt="" /></a>
 )
 </div>
 <div style="vertical-align: middle; font-size: smaller; text-align: center;"><{$lang_cursortedby}></div>
