--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -5,7 +5,7 @@
 		<div style="text-align: right; font-size: 75%; margin-right: 5px;">
 			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlespot.published|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlespot.submitter}>&nbsp;<{$articlespot.hits|wordwrap:50:"\n":true}>
 		</div>
-		<div style="display: table;"><{$articlespot.introtext}></div>
+		<div><{$articlespot.introtext}></div>
 	</div>
 	<div class="impression_articleFooter">
 		<span style="float: left;">
