Modified class impression_articleMain
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24648 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -43,7 +43,7 @@ tr.impression_even td {
 	vertical-align: text-bottom; }
 
 .impression_articleMain {
-	display: inline-block;
+	display: block;
 	padding: 2px 4px 2px 4px;
 	background-color: #FFF;
 	border-left: 1px solid #E8E6E2;
