--- a/templates/blocks/impression_block_news.html
+++ b/templates/blocks/impression_block_news.html
@@ -3,7 +3,7 @@
 	<div class="impression_articleTitle"><{$articlenews.title}></div>
 	<div id="impression_main" class="impression_articleMain">
 		<div style="text-align: right; font-size: 75%; margin-right: 5px;">
-			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.published|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
+			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.published|wordwrap:50:"\n":true}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
 		</div>
 		<{$articlenews.introtext}>
 	</div>
